fix: various - temporarily comment out quote interval - fix background transition on firefox

--- a/src/components/widgets/background/scss/index.scss
+++ b/src/components/widgets/background/scss/index.scss
@@ -12,7 +12,9 @@
 
 .backgroundTransform {
   @include animation('fadein2 2s');
-  transition: background  2s;
+  -webkit-transition: background 2s;
+  -o-transition: background 2s;
+  transition: background 2s;
 }
 
 @include keyframes(fadein2) {
